# TinyLM-RMSnorm

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  ISSUES.md  LICENSE  README.md  bench_rmsnorm.py  compose.2070.yml  compose.4090.yml  docker-compose.yml  evaluate.py  infer.py  model.py  pyproject.toml  requirements.txt  setup.py  setup_cuda.py  tokenizer.json  train.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
benchmarks/: bench_attention.py
conf/: config.yaml
conf/data/: combined.yaml  tinyshakespeare.yaml  tinystories.yaml
conf/finetune/: freeze_early.yaml  freeze_embeddings.yaml  full.yaml  none.yaml
conf/kernels/: auto.yaml  cuda.yaml  pytorch.yaml  triton.yaml
conf/model/: 100m.yaml  large.yaml  medium.yaml  small.yaml  tiny.yaml
conf/quant/: none.yaml  ternary.yaml
conf/tokenizer/: bytelevel.yaml  whitespace.yaml
conf/training/: cpu_test.yaml  default.yaml  (+5 more)
csrc/: rmsnorm_binding.cpp
data/: prepare_tinystories.py
journal/: 001_pipeline_and_streaming.md  002_the_tokenizer_trap.md
kernels/: rmsnorm_cuda.cu
plots/: ablation_rmsnorm.csv  kv_curve.csv  kv_vs_nokv.csv
scripts/: ablation_end2end.py  bench_decode_tps.py  bench_decode_tps_refactored.py  bench_gradient_checkpointing.py  bench_kv_curve.py  bench_kv_curve_refactored.py  bench_kv_vs_nokv.py  bench_rmsnorm.py  bench_rmsnorm_refactored.py  benchmark_base.py  overnight_experiments.sh  plot_ablation.py  plot_kv_curve.py  plot_kv_vs_nokv.py  plot_rmsnorm.py  plot_tokens_sec.py  plot_training_curve.py  plot_vram_seq.py  prepare_combined.py  prepare_tinyshakespeare.py  prepare_tinystories.py  run_all.sh  vram_vs_seq.py
tests/: __init__.py  test_architectures.py  test_attention_ops.py  test_basic.py  test_cache_manager.py  test_gradient_checkpointing.py  test_kernel_registry.py  test_quant_registry.py  test_rmsnorm.py  test_system.py  test_ternary_integration.py  test_trainer.py  test_training.py
tinylm/: __init__.py
(+63 files in other folders)
