[build-system]
requires = ["setuptools>=61.0", "wheel", "torch>=2.2", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "tinylm-lab"
version = "0.1.0"
description = "TinyLM Lab: A minimal language model framework for multi-agent research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["language-model", "transformer", "cuda", "rmsnorm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2",
    "tokenizers>=0.15",
    "datasets>=2.19",
    "numpy>=1.25",
    "tqdm",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "tensorboard>=2.14",
    "wordfreq>=3.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
tinylm-train = "train:main"
tinylm-infer = "infer:main"

[tool.setuptools]
packages = ["tinylm", "tinylm.model", "tinylm.inference", "tinylm.quant", "tinylm._ext", "tinylm.training"]
py-modules = ["train", "infer"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["kernels/*.cu", "kernels/*.cpp", "conf/**/*.yaml"]

[dependency-groups]
dev = [
    "bittorch",
    "pytest",
    "ruff",
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
bittorch = { path = "../bittorch", editable = true }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
